@@ -1,5 +1,8 @@
 Note: this log is only for notes post-1.0-conversion
 
+1 October 2008
++ added Captcha to anonymous user forms
+
 2 September 2008
 + Checking elements against database restricted names.
 
